# garagedoors

./: .gitignore  DEPLOY.md  README.md  areas.json  build-all.js  deploy-s3.js  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py  seed.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  business.py  leads.py  public.py  reviews.py  services.py
backend/app/core/: config.py  db.py  deps.py  security.py
backend/app/models/: __init__.py  lead.py  review.py  service.py  user.py
backend/app/schemas/: auth.py  lead.py  review.py  service.py
backend/app/services/: pricing.py  service_area.py
backend/scripts/: smoke_test.py
backend/tests/: conftest.py  test_auth.py
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  railway.toml  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/layout/: EmergencyBar.tsx  Footer.tsx  Header.tsx  (+4 more)
frontend/src/lib/: api.ts  config.ts  i18n.ts  siteConfig.ts  utils.ts
frontend/src/locales/: en.json  es.json
frontend/src/pages/: AreasPage.tsx  ContactPage.tsx  GalleryPage.tsx  HomePage.tsx  NotFoundPage.tsx  QuotePage.tsx  ServicesPage.tsx
frontend/src/store/: ui.ts
frontend/src/styles/: index.css
(+15 files in other folders)
